--- a/config/script-opts/uosc.conf
+++ b/config/script-opts/uosc.conf
@@ -36,7 +36,7 @@ volume_step=1
 volume_font_scale=1
 
 # playback speed widget: mouse drag or wheel to change, click to reset
-speed=no
+speed=yes
 speed_size=46
 speed_size_fullscreen=68
 speed_persistency=
@@ -53,8 +53,8 @@ menu_opacity=0.8
 menu_font_scale=1
 
 # top bar with window controls and media title shown only in no-border mode
-top_bar_size=40
-top_bar_size_fullscreen=46
+top_bar_size=30
+top_bar_size_fullscreen=35
 top_bar_persistency=
 top_bar_controls=yes
 top_bar_title=yes
@@ -76,11 +76,11 @@ color_foreground_text=000000
 color_background=000000
 color_background_text=ffffff
 # use bold font weight throughout the whole UI
-font_bold=no
+font_bold=yes
 # show total time instead of time remaining
-total_time=no
+total_time=yes
 # hide UI when mpv autohides the cursor
-autohide=no
+autohide=yes
 # can be: none, flash, static, manual (controlled by flash-pause-indicator and decide-pause-indicator commands)
 pause_indicator=flash
 # screen dim when stuff like menu is open, 0 to disable
