--- a/config/input.conf
+++ b/config/input.conf
@@ -1,5 +1,3 @@
-MENU        script-binding uosc/menu
-ctrl+s      async screenshot                       #! Utils > Screenshot
-P           script-binding uosc/playlist           #! Utils > Playlist
-C           script-binding uosc/chapters           #! Utils > Chapters
-q           quit #!
+ctrl+s      async screenshot
+C           script-binding uosc/chapters
+q           quit
