增加快捷键配置

--- a/config/input.conf
+++ b/config/input.conf
@@ -1,3 +1,44 @@
-ctrl+s      async screenshot
-C           script-binding uosc/chapters
-q           quit
+C               script-binding uosc/chapters
+
+# https://github.com/dragons4life/MPC-HC-config-for-MPV/blob/master/input.conf
+# https://github.com/Argon-/mpv-config/blob/master/input.conf
+# https://github.com/po5/mpv-config/blob/master/input.conf
+#Basics
+SPACE           cycle pause
+Alt+ENTER       cycle fullscreen
+MBTN_LEFT_DBL   cycle fullscreen                    #fullscreen/un-fullscreen
+ESC             set fullscreen no
+Alt+x           quit
+Alt+t           cycle ontop                         # keep mpv window on top of others
+
+# Seek
+PGUP            playlist-prev
+PGDWN           playlist-next
+RIGHT           seek 5
+LEFT            seek -5
+Ctrl+RIGHT      seek 15
+Ctrl+LEFT       seek -15
+WHEEL_UP        seek -1
+WHEEL_DOWN      seek +1
+
+#Video
+Alt+1           set window-scale 0.5    			#50% zoom
+Alt+2           set window-scale 0.75    			#75% zoom
+Alt+3           set window-scale 1    			    #100% zoom
+Alt+4           set window-scale 1.25   			#125% zoom
+Alt+5           set window-scale 1.5   			    #125% zoom
+Alt+6           set window-scale 1.75				#175% zoom
+Alt+7           set window-scale 2				    #200% zoom
+ctrl+s          async screenshot
+
+#Audio
+UP              add volume +5  					    #Increases the volume by number
+DOWN            add volume -5   			        #Decreases the volume by number
+Ctrl+>          add audio-delay 0.100               # this changes audio/video sync
+Ctrl+<          add audio-delay -0.100
+Ctrl+M          cycle mute 					        # cycle between mute
+
+#Subs
+/               cycle sub-visibility          		#cycle sub visilibility
+> add           sub-delay +0.1                      # add
+< add           sub-delay -0.1           		    # subtract 100 ms delay from subs
